--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "snyk": "^1.14.1",
     "socket.io": "^1.4.6",
     "valid-url": "latest",
-    "walk": "latest"
+    "walk": "latest",
+    "moment": "2.0.0"
   },
   "snyk": true
 }
